First tests for GoogleApiClient.java